index.html modified

--- a/html/index.html
+++ b/html/index.html
@@ -33,14 +33,15 @@
         </div>
     </div>
 
-    <div class="first-slider clearfix">
-        <div class="slider">
+    <div class="container">
+        <div class="first-slider clearfix">
+            <div class="slider">
 
-        </div>
-        <div class="text">
-            <h4>Unser Geschäftsmodell gründet auf der Idee gemeinsam mit unseren Kunden, nicht durch unsere Kunden,
-                erfolgreich zu sein. </h4>
-            <p>Die Arbeitsform des 21. Jahrhunderts ist die Projektarbeit, hier sind sich die Experten einig. Leider neigen Softwareprojekte sehr gerne dazu, zu scheitern, je nachdem welcher Quelle man glauben schenken mag, liegt diese Quote bei bis zu 2/3 aller Softwareprojekte. Hierbei muss das Projekt entweder abgebrochen werden oder kann nur mit deutlichem Mehraufwand in Kosten und Zeit beendet werden. </p>
+            </div>
+            <div class="text">
+                <h4>Unser Geschäftsmodell gründet auf der Idee gemeinsam mit unseren Kunden, nicht durch unsere Kunde. </h4>
+                <p>Die Arbeitsform des 21. Jahrhunderts ist die Projektarbeit, hier sind sich die Experten einig. Leider neigen Softwareprojekte sehr gerne dazu, zu scheitern, je nachdem welcher Quelle man glauben schenken mag, liegt diese Quote bei bis zu 2/3 aller Softwareprojekte. Hierbei muss das Projekt entweder abgebrochen werden oder kann nur mit deutlichem Mehraufwand in Kosten und Zeit beendet werden. </p>
+            </div>
         </div>
     </div>
 
