html slicing in process

--- a/html/index.html
+++ b/html/index.html
@@ -33,17 +33,118 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="first-slider clearfix">
+    <section class="first-slider-sect">
+        <div class="container clearfix">
             <div class="slider">
-
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/slide-1.jpg" alt=""/>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/slide-2.jpg" alt=""/>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/slide-3.jpg" alt=""/>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/slide-4.jpg" alt=""/>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/slide-5.jpg" alt=""/>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/slide-6.jpg" alt=""/>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
             </div>
             <div class="text">
                 <h4>Unser Geschäftsmodell gründet auf der Idee gemeinsam mit unseren Kunden, nicht durch unsere Kunde. </h4>
                 <p>Die Arbeitsform des 21. Jahrhunderts ist die Projektarbeit, hier sind sich die Experten einig. Leider neigen Softwareprojekte sehr gerne dazu, zu scheitern, je nachdem welcher Quelle man glauben schenken mag, liegt diese Quote bei bis zu 2/3 aller Softwareprojekte. Hierbei muss das Projekt entweder abgebrochen werden oder kann nur mit deutlichem Mehraufwand in Kosten und Zeit beendet werden. </p>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="competencies-sect">
+        <div class="container">
+            <h3>Kompetenzen</h3>
+            <p class="sect-descrip">Unsere Partner und unser Industrie 4.0 Konzept stellen sich vor.: <br/>
+                Zusammen mit unseren leistungsstarken Partnern konzentrieren wir uns auf die Realisierung Ihrer Idee; dass ist was wir unter „gemeinsam Erfolgreich“ verstehen</p>
+            <span class="sect-title-line"></span>
+            <div class="competencies-block-wrap clearfix">
+                <a href="#" class="competencies-block">
+                    <span class="title">MRT-Kompetenzzentrum</span>
+                    <img src="img/compet-1.png" alt=""/>
+                    <span>
+                        Unser Partner bei der Entwicklung medizinischer Produktlösungen im Radiologiebereich. Herr PD. Dr. Knut Eberhardt hat 30 Jahre Erfahrung in radiologischen Untersuchungen, profitieren Sie von diesem Wissen:
+                    </span>
+                    <span>
+                        Haben Sie Bedarf an medizinischen Businessprozessen oder Fachprodukten. Können wir auf Wunsch diesen Partner hinzuziehen
+                    </span>
+                </a>
+                <a href="#" class="competencies-block">
+                    <span class="title">SK-Games</span>
+                    <img src="img/compet-2.png" alt=""/>
+                    <span>
+                        Kreativer und erfolgreicher Entwickler von Brettspielen. Die Inside entwickelt in Zusammenarbeit Spieleapplikationen für Android und Apple.
+                    </span>
+                    <span>
+                        Sie haben eine interessante Spieleidee und wollen diese entwickeln lassen, wir können die Markttauglichkeit von SK-Games prüfen lassen.
+                    </span>
+                </a>
+                <a href="#" class="competencies-block">
+                    <span class="title">ConnectionPoint</span>
+                    <img src="img/compet-3.png" alt=""/>
+                    <span>
+                        Unser russisches Partnerunternehmen:
+Profitieren Sie von der Möglichkeit das fertige Konzept zu günstigen Preisen in
+                    </span>
+                    <span>
+                        Osteuropa programmieren zu lassen. Die deutschen Ingenieure in beiden Unternehmen garantieren Ihnen gleichbleibende Qualität bei optimalen Kosten. Grafische Lösungen können über diesem Partner ebenfalls günstig angeboten werden.
+                    </span>
+                </a>
+                <a href="#" class="competencies-block">
+                    <span class="title">Industrie 4.0</span>
+                    <img src="img/compet-4.png" alt=""/>
+                    <span>
+                        Die Kombination der Kompetenzen innerhalb der Inside GmbH ermöglicht es uns Industrie 4.0 Projekte optimal zu betreuen.
+                    </span>
+                    <span>
+                        Profitieren Sie hiervon, unser Kochrezept für Ihr Industrie 4.0 Projekt lautet:
+                    </span>
+                    <span>
+                        1 Experte in der Prozessoptimierung <br/>
+                        1 Experte in der Produktionswirtschaft <br/>
+                        1 Experte in der Programmierung
+                    </span>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="concept-sect">
+        <h3>Konzept</h3>
+        <p class="sect-descrip">Unser Konzept ist: „keep it simple“. Geschäftsmodell dies spiegelt sich auch in unseren Prozessen wieder, erfolgreich zu sein.</p>
+        <span class="sect-title-line"></span>
+
+        <div class="container">
+            <div class="concept-img">
+                <img src="img/concept-img-desktop.png" alt="" class="desktop"/>
+                <img src="img/concept-img-mobile.png" alt="" class="mobile"/>
+            </div>
+
+            <div class="concept-blocks-wrap">
+
+            </div>
+        </div>
+
+
+
+    </section>
+
 
 
 
