slicing in process

--- a/html/index.html
+++ b/html/index.html
@@ -126,23 +126,167 @@ Profitieren Sie von der Möglichkeit das fertige Konzept zu günstigen Preisen i
     </section>
 
     <section class="concept-sect">
-        <h3>Konzept</h3>
-        <p class="sect-descrip">Unser Konzept ist: „keep it simple“. Geschäftsmodell dies spiegelt sich auch in unseren Prozessen wieder, erfolgreich zu sein.</p>
-        <span class="sect-title-line"></span>
-
         <div class="container">
+            <h3>Konzept</h3>
+            <p class="sect-descrip">Unser Konzept ist: „keep it simple“. Geschäftsmodell dies spiegelt sich auch in unseren Prozessen wieder, erfolgreich zu sein.</p>
+            <span class="sect-title-line"></span>
+
             <div class="concept-img">
-                <img src="img/concept-img-desktop.png" alt="" class="desktop"/>
-                <img src="img/concept-img-mobile.png" alt="" class="mobile"/>
+                <!--<img src="img/concept-img-desktop.png" alt="" class="desktop"/>-->
+                <!--<img src="img/concept-img-mobile.png" alt="" class="mobile"/>-->
+                <div class="bulb-wrap">
+                    <img src="img/bulb.png" alt="" class="bulb"/>
+                    <img src="img/bulb-hover.png" alt="" class="bulb hover"/>
+                </div>
+
+                <img src="img/conzept-arrow.png" alt="" class="arrow"/>
+
+                <div class="konzept-wrap">
+                    <img src="img/konzept.png" alt="" class="konzept"/>
+                    <img src="img/konzept-hover.png" alt="" class="konzept hover"/>
+                </div>
+
+                <div class="puzzle-wrap">
+                    <img src="img/puzzle.png" alt="" class="puzzle"/>
+                    <img src="img/puzzle-hover.png" alt="" class="puzzle hover"/>
+                </div>
             </div>
 
-            <div class="concept-blocks-wrap">
-
+            <div class="concept-blocks-wrap clearfix">
+                <div class="concept-block">
+                    <div class="line"><span></span></div>
+                    <p class="title">Vor dem Spiel:</p>
+                    <div class="text">
+                        Ihre Idee ist unser Leitmotiv! <br/>
+                        Ob als:<br/>
+                        Mobile-App,<br/>
+                        Web-Business,<br/>
+                        Industrie 4.0,<br/>
+                        Geschäfts- und Prozesslösung,<br/>
+                        Oder einfach die Anpassung und<br/>
+                        Verbesserung bestehender Lösungen
+                    </div>
+                </div>
+                <div class="concept-block">
+                    <div class="line"><span></span></div>
+                    <p class="title">Anpfiff</p>
+                    <div class="text">
+                        Den Erfolg gemeinsam suchen: <Br>
+                        Anwesenheit vor Ort, <br/>
+                        Ein Ansprechpartner, <br/>
+                        Europäisches Expertenteam für die bestmögliche Umsetzung, <br/>
+                        Offene, respektvolle und ehrliche Kommunikation garantiert.
+                    </div>
+                </div>
+                <div class="concept-block">
+                    <div class="line"><span></span></div>
+                    <p class="title">Aufstellung und Spieltaktik</p>
+                    <div class="text">
+                        Das Konzept als Schlüssel zum Erfolg: <br/>
+                        Machbarkeitsstudie, <br/>
+                        Aktive Ausrichtung nach dem Terminplan,<br/>
+                        Greifbare Umsetzungsvorschläge mit bewerteten Teillösungen,<br/>
+                        Architektur der Wunschmodule im Baukastensystem,<br/>
+                        Berücksichtigung zukünftiger Erweiterungen durch vorhandene Schnittstellen.
+                    </div>
+                </div>
+                <div class="concept-block">
+                    <div class="line"><span></span></div>
+                    <p class="title">Das Spiel</p>
+                    <div class="text">
+                        Professionelles Projekt- und Qualitätsmanagement aus einer Hand, garantiert: <br/>
+                        Offene und ehrliche Kommunikation,<br/>
+                        Funktionierende und klare Schnittstellen,<br/>
+                        Umsetzung unter Einhaltung der Kosten- und Zeitpläne.<br/>
+                        Der Führungstreffer:<br/>
+                        Auch nach erfolgreicher Abnahme, nehmen wir Ihre Fragen und Anregungen zu Herzen.
+                    </div>
+                </div>
+                <div class="concept-block">
+                    <div class="line"><span></span></div>
+                    <p class="title">Sieg – 90 Minuten klar geführt</p>
+                    <div class="text">
+                        „Nach dem Spiel ist vor dem Spiel.“ <br/>
+                        Unsere Geschäfts- und Abrechnungsmodelle sind auf nachhaltige und ehrliche Kundenbeziehungen ausgelegt.<br/>
+                        Ihre maximale Flexibilität - mit diesem Gedanken stehen wir auf und beenden den Tag.
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
 
+    <section class="about-us-section">
+        <div class="container">
+            <h3>Über Uns</h3>
+            <p class="sect-descrip">Die Inside ist ein Projekt von Menschen, die der Komplexität, der Hektik und dem Stress der heutigen Geschäftswelt mit der „Einfachheit“
+                <br/>
+                eines klaren Konzept entgegenwirken wollen.
+            </p>
+            <span class="sect-title-line"></span>
 
+            <div class="crewmans-wrap clearfix">
+                <a href="#" class="crewman-block">
+                    <span class="photo-wrap">
+                        <span class="bg"></span>
+                        <img src="img/crewman-1.png" alt=""/>
+                    </span>
+                    <span class="title">Lars Eberhardt</span>
+                    <span class="subtitle">Dipl.-Wirtschaftsingenieur</span>
+                    <span class="section">
+                        <i>Kernkompetenzen:</i>
+                        Methodische Konzepte, Prozessbetrachtungen, HRM, QM, Markt- und Investitionsanalysen
+                    </span>
+                    <span class="section">
+                        <i>Privates:</i>
+                        Liebt den Sport und das Motorradfahren, nie um eine spontane Ausrede verlegen, entspannt in geselliger Runde.
+                    </span>
+                </a>
+                <a href="#" class="crewman-block">
+                    <span class="photo-wrap">
+                        <span class="bg"></span>
+                        <img src="img/crewman-2.png" alt=""/>
+                    </span>
+                    <span class="title">Julian Scharnagl</span>
+                    <span class="subtitle">M.Sc</span>
+                    <span class="section">
+                        <i>Kernkompetenzen:</i>
+                        Technische Konzepte, Schnittstellenanalyse, Compilerprogrammierung, Softwaredebugging
+                    </span>
+                    <span class="section">
+                        <i>Privates:</i>
+                        Leidenschaftlicher Motorradfahrer, mag schwarzen Humor und lieblichen WeiSwein.
+                    </span>
+                </a>
+                <a href="#" class="crewman-block">
+                    <span class="photo-wrap">
+                        <span class="bg"></span>
+                        <img src="img/crewman-3.png" alt=""/>
+                    </span>
+                    <span class="title">Alexej Wergurnow</span>
+                    <span class="subtitle">Dipl.-Wirtschaftsingenieur</span>
+                    <span class="section">
+                        <i>Kernkompetenzen:</i>
+                        Vertriebskonzepte,  Projektmanagement, Methodische Konzepte, Prozessbetrachtungen
+                    </span>
+                    <span class="section">
+                        <i>Privates:</i>
+                        Leidenschaftlicher Großstadtliebhaber, mag schwarzen Humor und über den Tellerrand hinwegzuschauen.
+                    </span>
+                </a>
+            </div>
+        </div>
+    </section>
 
+    <section class="contact-sect">
+        <div class="container">
+            <h3>Kontakt</h3>
+            <p class="sect-descrip">
+                One of the primary sources of our success is taking care of the quality and the dynamic development of our products.
+                <br/>
+                We invest in development to ensure that our products are safe and modern.
+            </p>
+            <span class="sect-title-line"></span>
+        </div>
     </section>
 
 
