--- a/html/index.html
+++ b/html/index.html
@@ -286,6 +286,36 @@ Profitieren Sie von der Möglichkeit das fertige Konzept zu günstigen Preisen i
                 We invest in development to ensure that our products are safe and modern.
             </p>
             <span class="sect-title-line"></span>
+            <div class="clear"></div>
+            <div class="contact-wrap clearfix">
+                <div class="contact-form">
+                    <form action="#">
+                        <input type="text" class="input input-name" placeholder="Your name"/>
+                        <input type="text" class="input input-phone" placeholder="Telefon:"/>
+                        <input type="text" class="input input-email" placeholder="E-mail:"/>
+                        <textarea name="message" id="message" cols="30" rows="4" class="input input-message" placeholder="Your message..."></textarea>
+                        <button class="btn-send">SEND</button>
+                    </form>
+                </div>
+                <div class="contact-info">
+                    <p class="title">Das Kontaktformular ist nichts für Sie, probieren Sie es direkt bei uns</p>
+                    <strong>Kontakt:</strong>
+                    <address>
+                        Inside Funktionelle Diagnosetechnik GmbH <br/>
+                        Balthasar-Neumann-Platz 1 <br/>
+                        97440 Werneck
+                    </address>
+                    <p class="email">
+                        E-Mail:
+                        <a href="mailto:info@inside-solutions.de">info@inside-solutions.de</a>
+                    </p>
+                    <p class="phone">
+                        Tel.:
+                        <a href="tel:+491733522324">+491733522324</a>
+                    </p>
+                </div>
+            </div>
+
         </div>
     </section>
 
