finish static slicing. start responsive

--- a/html/index.html
+++ b/html/index.html
@@ -301,23 +301,103 @@ Profitieren Sie von der Möglichkeit das fertige Konzept zu günstigen Preisen i
                     <p class="title">Das Kontaktformular ist nichts für Sie, probieren Sie es direkt bei uns</p>
                     <strong>Kontakt:</strong>
                     <address>
+                        <span class="icon"><i></i></span>
                         Inside Funktionelle Diagnosetechnik GmbH <br/>
                         Balthasar-Neumann-Platz 1 <br/>
                         97440 Werneck
                     </address>
+
                     <p class="email">
+                        <span class="icon"><i></i><i class="hover"></i><i class="active"></i></span>
                         E-Mail:
                         <a href="mailto:info@inside-solutions.de">info@inside-solutions.de</a>
                     </p>
                     <p class="phone">
+                        <span class="icon"><i></i><i class="hover"></i><i class="active"></i></span>
                         Tel.:
                         <a href="tel:+491733522324">+491733522324</a>
                     </p>
                 </div>
+                <a href="#" class="contacts-link">Datenschutzerklärung <br/>
+                    Preisliste</a>
             </div>
-
         </div>
     </section>
+
+    <footer>
+        <div class="container clearfix">
+            <div class="footer-block">
+                <h6>Kontakt:</h6>
+                Inside Funktionelle Diagnosetechnik GmbH <br/>
+                Balthasar-Neumann-Platz 1<br/>
+                97440 Werneck<br/>
+                E-Mail: info@inside-solutions.de<br/>
+                Tel.: +491733522324
+            </div>
+            <div class="footer-block">
+                <h6>RGesellschaft:</h6>
+                Sitz der Gesellschaft: 97440 Werneck <br/>
+                Geschäftsführer: Lars Eberhardt<br/>
+                HRB 3221<br/>
+                AG Schweinfurt<br/>
+                Umsatzsteuer-ID: DE 193235867
+            </div>
+            <div class="footer-block">
+                <h6>Rechtliches:</h6>
+                Wir weisen Sie ausdrücklich darauf hin, d <br/>
+                ass wir für die Inhalte von Seiten, auf die von<br/>
+                hier verwiesen wird (weiterführende Links) und<br/>
+                die nicht zu unserem Angebot gehören, keinerlei<br/>
+                Haftung übernehmen. Wir distanzieren uns von deren Inhalten.
+            </div>
+            <div class="footer-block">
+                <h6>Linksetzung:</h6>
+                Links auf unsere Internetpräsenzen sind stets so zu setzen, dass die jeweilige Startseite aufgerufen wird. Die Einbindung in Frames anderer Präsen
+            </div>
+            <div class="footer-block">
+                <h6>Copyright:</h6>
+                Alle Inhalte unserer Webpräsenz unterliegen dem Urheberrecht. Weder Text, Grafiken, Fotos noch sonstige Inhalte dürfen ohne unsere ausdrückliche schriftliche Genehmigung anderweitig verwendet werden. Die Rechte aller erwähnten Marken, Warenzeichen oder Logos gehören den jeweiligen Eigentümern.
+            </div>
+        </div>
+        <div class="container">
+            <div class="footer-social">
+                <a href="#" class="fb">
+                    <i></i>
+                    <i class="hover"></i>
+                    <i class="active"></i>
+                </a>
+                <a href="#" class="tweet">
+                    <i></i>
+                    <i class="hover"></i>
+                    <i class="active"></i>
+                </a>
+                <a href="#" class="dribble">
+                    <i></i>
+                    <i class="hover"></i>
+                    <i class="active"></i>
+                </a>
+                <a href="#" class="linkedin">
+                    <i></i>
+                    <i class="hover"></i>
+                    <i class="active"></i>
+                </a>
+                <a href="#" class="g-plus">
+                    <i></i>
+                    <i class="hover"></i>
+                    <i class="active"></i>
+                </a>
+            </div>
+            <div class="copyright">
+                Copyright © 2015 - Inside - All rights reserved.
+            </div>
+            <a href="#" class="scrollTop">
+                <i></i>
+                <i class="hover"></i>
+                <i class="active"></i>
+            </a>
+
+        </div>
+    </footer>
 
 
 
