--- a/html/index.html
+++ b/html/index.html
@@ -140,6 +140,7 @@ Profitieren Sie von der Möglichkeit das fertige Konzept zu günstigen Preisen i
                 </div>
 
                 <img src="img/conzept-arrow.png" alt="" class="arrow"/>
+                <img src="img/conzept-arrow-mobile.png" alt="" class="arrow-mobile"/>
 
                 <div class="konzept-wrap">
                     <img src="img/konzept.png" alt="" class="konzept"/>
@@ -354,7 +355,7 @@ Profitieren Sie von der Möglichkeit das fertige Konzept zu günstigen Preisen i
                 <h6>Linksetzung:</h6>
                 Links auf unsere Internetpräsenzen sind stets so zu setzen, dass die jeweilige Startseite aufgerufen wird. Die Einbindung in Frames anderer Präsen
             </div>
-            <div class="footer-block">
+            <div class="footer-block copyright-block">
                 <h6>Copyright:</h6>
                 Alle Inhalte unserer Webpräsenz unterliegen dem Urheberrecht. Weder Text, Grafiken, Fotos noch sonstige Inhalte dürfen ohne unsere ausdrückliche schriftliche Genehmigung anderweitig verwendet werden. Die Rechte aller erwähnten Marken, Warenzeichen oder Logos gehören den jeweiligen Eigentümern.
             </div>
